# ugview

./: LICENSE  README.md  argparser.py  call_ugview.py  pyproject.toml  ugview.sh
ugview/: __init__.py  reader.py
ugview/src/: reader.py  viewer.py
ugview/tests/: conftest.py  test_reader.py
