[project]
authors = [{name = "Florian Ziemen", email = "ziemen@dkrz.de"}]
dependencies = []
name = "ugview"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
ugview = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
easygems = ">=0.0.14,<0.0.15"
zarr = ">=3.0.7,<4"
